gestion affichage des commentaire et mise a jour de la documentation
